# Canyon

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CanyonLang.md  Cloneable.h  LICENSE  Makefile  README.md  Serializable.h  SerializableString.c  SerializableString.h  configure.sh  configure_debug.sh  configure_release.sh  core.c  core.h  install.sh  main.c
.github/workflows/: tests.yml
Compiler/: Makefile  ast.cpp  ast.h  builtins.cpp  main.cpp  parse.cpp  parse.h  parseRvalue.cpp  parseRvalue.h  tokens.cpp  tokens.h
Compiler/sample/: sample.c  sample.canyon
resources/: builtin_api.json
src/: .clang-format  ast.cpp  ast.h  builtins.cpp  builtins.h  ccodeadapter.cpp  ccodeadapter.h  ccodegenerator.cpp  ccodegenerator.h  config.h.in  errorhandler.cpp  errorhandler.h  lexer.cpp  lexer.h  main.cpp  parse.cpp  parseRvalue.cpp  parseRvalue.h  parser.cpp  parser.h  semanticanalyzer.cpp  semanticanalyzer.h  tokens.cpp  tokens.h
test/end_to_end_tests/: .gitignore  end_to_end_test.py
test/end_to_end_tests/tests/canyon_failure/empty/expected/: stderr
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_narrowing_int_conversion/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_nested_unit/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_to_binary_expression/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_to_function_call/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_to_integer/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_to_parenthesized_expression/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_to_unary_expression/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_unit_function_call/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/assignment_widening_int_conversion/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/binary_operands_mismatched_signedness/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/binary_operands_mismatched_width/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/block_expression_wrong_type/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/empty_function/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/final_expression_narrowing/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/final_expression_widening/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_call_not_enough_args/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_call_too_many_args/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_call_unreachable_arguments/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_call_unreachable_call/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_call_way_not_enough_args/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_call_way_too_many_args/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_final_expression_unit_function_call/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_parameter_bad_type/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/function_shadowing_parameter/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/if_condition_not_bool/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/if_else_mismatch_types/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/if_else_unreachable/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/if_elseif_condition_not_bool/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/if_elseif_else_mismatch_types1/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/if_elseif_else_mismatch_types2/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/if_elseif_else_mismatch_types3/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/if_elseif_mismatch_types/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/let_statement_missing_annotation/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/let_statement_missing_expression/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/let_statement_narrowing_int_conversion/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/let_statement_redefine_symbol_in_scope/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/let_statement_self_referential/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/let_statement_unit_function_call/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/let_statement_widening_int_conversion/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/main_not_unit/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/non_empty_function_missing_final_expression_or_return/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/non_symbol_expression_function_call/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/non_symbol_integer_function_call/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/parenthesized_narrowing_int_conversion/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/parenthesized_unit_assignment/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/parenthesized_unit_function_call/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/parenthesized_widening_int_conversion/: main.canyon
test/end_to_end_tests/tests/canyon_failure/semantics/return_value_from_unit_function_returnExpression/: main.canyon
test/unit_tests/: test1.cpp  test_lexer.cpp  test_parser.cpp  test_tokens.cpp
test/unit_tests/utilities/: test_utilities.h
(+177 files in other folders)
